Add social logins
- Only Google supported so far
- The "Constance" Django plugin is used to store authentication provider
  secrets in the DB, thereby reducing the need to manually maintain them
  with the source or use some secret management tooling

--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,8 @@ name = "pypi"
 django = "*"
 django-crispy-forms = "*"
 django-feather = "*"
+social-auth-app-django = "*"
+django-constance = {extras = ["database"], version = "*"}
 
 [dev-packages]
 pytest-django = "*"
